--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.ko
 *.obj
 *.elf
+*.bin
 
 # Linker output
 *.ilk
@@ -21,6 +22,8 @@
 *.a
 *.la
 *.lo
+*.list
+*.mk
 
 # Shared objects (inc. Windows DLLs)
 *.dll
