--- a/MainBoardODR/Debug/makefile
+++ b/MainBoardODR/Debug/makefile
@@ -40,8 +40,8 @@ MainBoardODR.hex \
 all: MainBoardODR.elf secondary-outputs
 
 # Tool invocations
-MainBoardODR.elf: $(OBJS) $(USER_OBJS) C:\Users\Jonathan\Documents\GitHub\Terminator\MainBoardODR\STM32F334K8TX_FLASH.ld
-	arm-none-eabi-gcc -o "MainBoardODR.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Jonathan\Documents\GitHub\Terminator\MainBoardODR\STM32F334K8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MainBoardODR.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+MainBoardODR.elf: $(OBJS) $(USER_OBJS) C:\Users\Madita\Documents\Git-Repos\Terminator\MainBoardODR\STM32F334K8TX_FLASH.ld
+	arm-none-eabi-gcc -o "MainBoardODR.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Madita\Documents\Git-Repos\Terminator\MainBoardODR\STM32F334K8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="MainBoardODR.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
